# NJobSystem

./: CMakeLists.txt  README.md
CMake/: TargetUseNJS.cmake
NJS/: CMakeLists.txt
NJS/Source/NJS/: Coroutine.cpp  Coroutine.h  Job.h  NJS.h  System.cpp  System.h  Utilities.h  Waiter.h  WorkerThread.cpp  WorkerThread.h
Samples/: CMakeLists.txt
Samples/InitNJobSystem/: CMakeLists.txt
Samples/InitNJobSystem/Source/: InitNJobSystem.cpp
